# AgentSim

./: .gitignore  AgentSim_Documentation.docx  AgentSim_Proposal.docx  CLAUDE.md  generate_docs.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: architecture-flowchart.html
smoke_tests/: README.md  lensless_diffusercam_range_test.py  nlos_depth_resolution_test.py  nlos_spad_feasibility_test.py
smoke_tests/output/: diffusercam_range_results.json  spad_feasibility_results.json
src/agentsim/: ARCHITECTURE.md  main.py
tests/: conftest.py
tests/e2e/: test_full_experiment.py
tests/integration/: test_orchestrator.py  test_physics_integration.py
tests/unit/: test_agent_registry.py  test_analyst_requery.py  test_ast_extract.py  test_checker_pipeline.py  test_client.py  test_constants.py  test_constraint_checker.py  test_crb_analytical.py  test_crb_dispatch.py  test_crb_numerical.py  test_crb_sensitivity.py  test_degradation.py  test_docker.py  test_doe_models.py  test_doe_sampler.py  test_domain_loader.py  test_domain_schema.py  test_edits.py  test_environment.py  test_equations.py  test_explorer.py  test_feasibility_phase.py  test_feasibility_state.py  test_file_handling.py  test_gates.py  test_gp_acquisition.py  test_graph_commands.py  test_graph_context.py  test_json_normalization.py  test_kg_loader.py  test_kg_models.py  test_kg_schema.py  test_kg_units.py  test_lensless_domain.py  test_literature_agents.py  test_literature_models.py  test_literature_transitions.py  test_mesh_quality.py  test_mitsuba_detection.py  (+31 more)
(+210 files in other folders)
