[project]
name = "agentsim"
version = "0.1.0"
description = "Autonomous hypothesis-driven simulation for scientific research"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.4",
    "pydantic>=2.0",
    "anyio>=4.0",
    "click>=8.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "fastmcp>=3.0",
]

[project.scripts]
agentsim = "agentsim.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
